--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -1,3 +1,17 @@
 title=com.shunyu.pdaUi5
 appTitle=com.shunyu.pdaUi5
 appDescription=App Description
+
+
+#XBUT,6: PdaView.Accept
+PdaView.Accept = accept
+#XBUT,10: PdaView.NewInvoice
+PdaView.NewInvoice = NewInvoice
+#XTIT,8: PdaView.Invoices
+PdaView.Invoices = Invoices
+#XTIT,5: PdaView.Title
+PdaView.Title = PDA check in
+#XFLD,2: CreateInvoiceView.NO
+CreateInvoiceView.NO = InvoiceNo
+#XFLD,8: CreateInvoiceView.MATERIEL
+CreateInvoiceView.MATERIEL = Materiel 
