--- a/webapp/i18n/i18n_en.properties
+++ b/webapp/i18n/i18n_en.properties
@@ -1,3 +1,10 @@
 title=com.shunyu.pdaUi5
 appTitle=com.shunyu.pdaUi5
 appDescription=App Description
+
+PdaView.Accept = 过账
+PdaView.NewInvoice = 新增
+PdaView.Invoices = 单据列表
+PdaView.Title = PDA检验单入库
+CreateInvoiceView.NO = 单据编号
+CreateInvoiceView.MATERIEL = 物料号 
